3.4 Files/Activity7/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\shaym\Documents\GitHub\CompSci\3.4 Files\Activity7
-d
C:\Users\shaym\Documents\GitHub\CompSci\3.4 Files\Activity7\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\shaym\Documents\GitHub\CompSci\3.4 Files\Activity7\ElevensBoard.java
<---- end of javadoc command ---->
Loading source file C:\Users\shaym\Documents\GitHub\CompSci\3.4 Files\Activity7\ElevensBoard.java...
Constructing Javadoc information...
C:\Users\shaym\Documents\GitHub\CompSci\3.4 Files\Activity7\ElevensBoard.java:36: error: cannot find symbol
	private Card[] cards;
	        ^
  symbol:   class Card
  location: class ElevensBoard
C:\Users\shaym\Documents\GitHub\CompSci\3.4 Files\Activity7\ElevensBoard.java:41: error: cannot find symbol
	private Deck deck;
	        ^
  symbol:   class Deck
  location: class ElevensBoard
C:\Users\shaym\Documents\GitHub\CompSci\3.4 Files\Activity7\ElevensBoard.java:116: error: cannot find symbol
	public Card cardAt(int k) {
	       ^
  symbol:   class Card
  location: class ElevensBoard
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating C:\Users\shaym\Documents\GitHub\CompSci\3.4 Files\Activity7\doc\ElevensBoard.html...
Generating C:\Users\shaym\Documents\GitHub\CompSci\3.4 Files\Activity7\doc\package-frame.html...
Generating C:\Users\shaym\Documents\GitHub\CompSci\3.4 Files\Activity7\doc\package-summary.html...
Generating C:\Users\shaym\Documents\GitHub\CompSci\3.4 Files\Activity7\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\shaym\Documents\GitHub\CompSci\3.4 Files\Activity7\doc\allclasses-frame.html...
Generating C:\Users\shaym\Documents\GitHub\CompSci\3.4 Files\Activity7\doc\allclasses-noframe.html...
Generating C:\Users\shaym\Documents\GitHub\CompSci\3.4 Files\Activity7\doc\index.html...
3 warnings
